# cruftless

./: .gitignore  0  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUG-METHODOLOGY.md  IR-DESIGN.md  LICENSE-MIT  README.md  SESSION-2026-05-21.md  env.example  env.local  probe.mjs  seed.md  trajectory.md
.claude/: skills
.githooks/: pre-push
cruftless/: Cargo.toml
cruftless/examples/: bench_call_overhead.rs  bench_call_shapes.rs  bench_ic.rs  bench_json_stringify.rs
cruftless/src/: assert.rs  crypto.rs  events.rs  fs.rs  http.rs  https.rs  lib.rs  main.rs  module_ns.rs  node_stubs.rs  os.rs  path.rs  process.rs  register.rs  stream.rs  test262_host.rs  timer.rs  tty.rs  url.rs  util.rs  zlib.rs
cruftless/tests/: binary_smoke.rs  builtin_stubs.rs  builtin_stubs_extended.rs  caps_audit.rs  caps_probes.rs  fs_smoke.rs  host_smoke.rs  http_server.rs  jit_getprop_end_to_end.rs  jit_resume_from_deopt.rs  pm_runtime_smoke.rs  tuple_a_b_close.rs
derive-constraints/: Cargo.toml  README.md
docs/: 185-presto-dissertation.md  247-the-derivation-inversion.md  250-server-seed.md  270-the-pin-art-model.md  288-the-pin-art-derivation.md  296-recency-density-and-the-drifting-aperture.md  297-pseudo-logos-without-malice.md  372-the-hypostatic-boundary.md  420-presto-an-architectural-style-for-representation-construction.md  432-server-an-architectural-style-for-engine-orchestration.md  445-pulverization-formalism.md  446-sipe-formal-construct.md  466-doc-446-as-a-sipe-instance.md  510-praxis-log-v-deflation-as-substrate-discipline.md  538-the-architectural-school-a-formalization.md  619-pin-art-canonical-formalization.md  656-treat-agent-output-like-compiler-output-the-lights-out-codebase-as-rederive.md  658-hierarchical-pin-art-constraint-specs-and-the-erasure-of-edge-case-bugs.md  659-rederive-for-the-working-engineer-hub.md  660-rederive-the-constraint-authoring-grammar.md  678-coherence-amplification-and-decoherence-as-inverse-pin-art-operations.md  685-the-self-reinforcing-boundary.md  688-subsumption-as-coherence-amplification.md  691-the-polytopal-feature-and-the-pin-art-bidirection.md  695-the-bidirectional-mirror.md  696-discrete-geometry-as-the-apparatus-that-names-the-polytope-inheritance-boundary.md  697-statistical-mechanics-of-learning-as-the-apparatus-that-names-the-capabilities-emerge-at-scale-boundary.md  699-the-training-time-sipe-t-formalization-of-grokking-cold-resolver-synthesis-on-doc-692.md  701-ill-resolved-against-the-corpus-information-lattice-learning-as-the-mature-prior-art-framework-for-the-pin-art-bilateral-and-the-joint-mi-lattice.md  702-ai-assisted-cross-language-code-translation-as-a-pin-art-bilateral-under-sipe-t-threshold-conditions-reading-the-bun-zig-to-rust-port.md  704-the-port-as-translation-is-a-category-error.md  705-pin-art-operationalized-for-intra-architectural-seam-detection.md  706-three-pilot-evidence-chain-derivation-from-constraints.md  707-pin-art-at-the-behavioral-surface-bidirectional-probes.md  711-the-dyadic-ascent-fractal-spiral-recursive-self-similarity-across-tiers-of-the-rung-1-rung-2-dyad.md  (+21 more)
host/: Cargo.toml  RUN-NOTES.md
host-v2/: Cargo.toml  build.rs
host-v2/src/: events.rs  fs.rs  http.rs  lib.rs  main.rs  module_ns.rs  node_stubs.rs  os.rs  path.rs  process.rs  register.rs  stream.rs  util.rs  zlib.rs
host-v2/tests/: binary_smoke.rs  builtin_stubs.rs  builtin_stubs_extended.rs  caps_probes.rs  fs_smoke.rs  jit_getprop_end_to_end.rs  jit_resume_from_deopt.rs  pm_runtime_smoke.rs  tuple_a_b_close.rs
pilots/rusty-js-ir/derived/: Cargo.toml
pilots/rusty-js-ir/derived/examples/: build_generated_rs.rs  lint_all.rs  lint_array_map.rs  lint_drift_demo.rs  lint_from_spec.rs  lower_array_map.rs
pilots/rusty-js-ir/derived/src/: ir.rs  lib.rs  lint.rs  lower.rs  spec_parser.rs
pilots/rusty-js-ir/derived/src/sections/: array_prototype_find.rs  array_prototype_index_search.rs  array_prototype_iteration.rs  array_prototype_map.rs  array_prototype_mutators.rs  array_prototype_reduce.rs  array_set_length.rs  global_predicates.rs  json_serialize.rs  math_binary_variadic.rs  math_unary.rs  misc_static.rs  mod.rs  number_prototype.rs  number_static.rs  object_assign.rs  object_descriptors.rs  object_integrity.rs  object_proto_ops.rs  object_prototype.rs  object_static.rs  promise_static.rs  reflect_static.rs  string_prototype.rs  to_primitive.rs
pilots/rusty-js-jit/derived/: Cargo.toml
pilots/rusty-js-jit/derived/examples/: bench_sum.rs
pilots/rusty-js-jit/derived/src/: deopt.rs  ic_table.rs  lib.rs  promote.rs  stub_aarch64.rs  tiny_baseline.rs  translator.rs
pilots/rusty-js-pm/derived/: Cargo.toml
pilots/rusty-js-pm/derived/examples/: just_example.rs  lh_ec.rs  localhost_tls_probe.rs  look.rs  npm_coverage.rs  registry_probe.rs  tls_probe.rs
pilots/rusty-js-pm/derived/src/: fetcher.rs  http.rs  install.rs  integrity.rs  lib.rs  linker.rs  lockfile.rs  resolver.rs  smoke.rs
pilots/rusty-js-runtime/derived/: Cargo.toml
pilots/rusty-js-runtime/derived/src/: abstract_ops.rs  bigint.rs  caps.rs  cjs_lexer.rs  generated.rs  interp.rs  interp_ic_table.rs  intrinsics.rs  iterator.rs  job_queue.rs  lib.rs  module.rs  napi.rs  promise.rs  prototype.rs  regex_hand.rs  regexp.rs  value.rs
pilots/rusty-js-runtime/derived/tests/: array_sort.rs  bare_builtin_fallback.rs  bare_specifier.rs  binding_capture.rs  cjs_loader.rs  class_accessors.rs  class_fields.rs  classes.rs  closure_upvalues.rs  complex_assign_target.rs  compound_assignment.rs  computed_key.rs  destructure.rs  export_default_class.rs  fn_name_length.rs  for_in.rs  gc_cycle.rs  host_hooks_golden.rs  import_meta.rs  intrinsics_golden.rs  iteration.rs  job_queue_golden.rs  labelled.rs  module_golden.rs  module_loader.rs  new_target.rs  number_statics.rs  object_create.rs  object_descriptors.rs  omega_5_w.rs  omega_5_x.rs  omega_5_y.rs  promise_golden.rs  prototype_chains.rs  re_exports.rs  regexp.rs  run_golden.rs  spread.rs  spread_misc.rs  switch_stmt.rs  (+1 more)
pilots/rusty-js-shapes/derived/: Cargo.toml
pilots/rusty-js-shapes/derived/src/: lib.rs  shape.rs
(+1850 files in other folders)
