# cruftless workspace — registers all per-pilot crates plus the apparatus
# binaries (derive-constraints, legacy/welch).
#
# Per Doc 581 trajectory §II Tier-D #9: workspace consolidation lets
# `cargo test --workspace --release` run every pilot's verifier and consumer-
# regression suite in a single command, dramatically simplifying the live-
# state spot-check from the trajectory's resume protocol.

[workspace]
resolver = "2"
members = [
    # Apparatus binaries
    "derive-constraints",
    "legacy/welch",
    # Pilots — alphabetical by surface
    "pilots/abort-controller/derived",
    "pilots/asn1-der/derived",
    "pilots/blob/derived",
    "pilots/buffer/derived",
    "pilots/bun-file/derived",
    "pilots/bun-serve/derived",
    "pilots/bun-spawn/derived",
    "pilots/compression/derived",
    "pilots/fetch-api/derived",
    "pilots/file/derived",
    "pilots/http-codec/derived",
    "pilots/sockets/derived",
    "pilots/node-fs/derived",
    "pilots/node-http/derived",
    "pilots/node-path/derived",
    "pilots/rusty-js-ast",
    "pilots/rusty-js-bytecode/derived",
    "pilots/rusty-js-gc/derived",
    "pilots/rusty-js-parser/derived",
    "pilots/rusty-js-runtime/derived",
    # IR-DESIGN.md Tier 1: spec-as-source-of-truth IR for ECMA-262 sections.
    "pilots/rusty-js-ir/derived",
    # Doc 731 / JIT-EXT 0+: baseline JIT compiler at the bytecode-to-
    # machine-code substrate boundary. Cranelift backend per R2.
    "pilots/rusty-js-jit/derived",
    # Doc 732 / PM-EXT 0+: package manager at the resolver-instance-#0
    # substrate boundary. Bilateral source (package.json + npm registry).
    "pilots/rusty-js-pm/derived",
    # LeJIT seed §I.2 / Shape-EXT 0+: hidden classes (shapes) for cruftless's
    # Object representation. Substrate-introduction round per Doc 729 §A8.13;
    # Pilot LeJIT-Σ (IC stub emitter) is the closure round that consumes
    # Object::shape_ptr_and_slot_for as the IC fast-path cache key.
    "pilots/rusty-js-shapes/derived",
    "pilots/streams/derived",
    "pilots/structured-clone/derived",
    "pilots/textencoder/derived",
    "pilots/tls/derived",
    # TSR (TypeScript source-language resolver) — pilots/ts-resolve/seed.md
    "pilots/ts-resolve/derived",
    # TCC (TypeScript consumer-corpus measurement) — pilots/ts-consumer-corpus/seed.md
    "pilots/ts-consumer-corpus/derived",
    # TXC (TypeScript execute-corpus measurement) — pilots/ts-execute-corpus/seed.md
    "pilots/ts-execute-corpus/derived",
    # T262C (test262 categorization) — pilots/test262-categorize/seed.md
    "pilots/test262-categorize/derived",
    "pilots/urlsearchparams/derived",
    "pilots/web-crypto/derived",
    "pilots/websocket/derived",
    "pilots/x509/derived",
    # JS host integration (trajectory Tier-H, seed §VII Sub-criterion 4)
    # Primary substrate: cruftless host on rusty-js-runtime.
    "cruftless",
]
