[package]
name = "cruftless"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "cruftless"
path = "src/lib.rs"

[[bin]]
name = "cruftless"
path = "src/main.rs"

[dependencies]
rusty-js-runtime = { path = "../pilots/rusty-js-runtime/derived" }
rusty-js-bytecode = { path = "../pilots/rusty-js-bytecode/derived" }
rusty-js-parser = { path = "../pilots/rusty-js-parser/derived" }
rusty-js-ast = { path = "../pilots/rusty-js-ast" }
indexmap = "2"
