[package]
name = "cruftless"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "cruftless"
path = "src/lib.rs"

[[bin]]
name = "cruftless"
path = "src/main.rs"

[dependencies]
rusty-js-runtime = { path = "../pilots/rusty-js-runtime/derived" }
rusty-js-bytecode = { path = "../pilots/rusty-js-bytecode/derived" }
rusty-js-parser = { path = "../pilots/rusty-js-parser/derived" }
rusty-js-ast = { path = "../pilots/rusty-js-ast" }
indexmap = "2"
# PM-EXT 12: rusty-js-pm exposed via `cruftless install` subcommand.
# The PM is install-time only, but living in the same binary keeps the
# CLI surface single.
rusty-js-pm = { path = "../pilots/rusty-js-pm/derived" }

[dev-dependencies]
# JIT-EXT 21 test exercises Runtime::resume_from_deopt_state with a
# hand-built DeoptRecoveredState.
rusty-js-jit = { path = "../pilots/rusty-js-jit/derived" }
