[package]
name = "rusty-js-jit"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Doc 731 §VII R2: Cranelift as the backend. The JIT does not own
# instruction selection, register allocation, scheduling, peephole
# optimization, or machine-code emission — Cranelift handles all of
# them. The JIT owns only the bytecode-to-Cranelift-IR translation
# table (per the op-p4-classification doc) and the function-table
# linkage into the runtime.
cranelift-codegen = "0.118"
cranelift-frontend = "0.118"
cranelift-jit = "0.118"
cranelift-module = "0.118"
cranelift-native = "0.118"

rusty-js-bytecode = { path = "../../rusty-js-bytecode/derived" }

# LeJIT-Σ (pilots/rusty-js-jit/stub-emitter/) StubE-EXT 3+: IC cache
# keys are (*const Shape, u32 slot) per shapes pilot
# docs/shape-design.md §11. The stub state machine consumes Rc<Shape>
# for pin-against-drop per Pred-stub.2.
rusty-js-shapes = { path = "../../rusty-js-shapes/derived" }

[dev-dependencies]
rusty-js-ast = { path = "../../rusty-js-ast" }
