[package]
name = "rusty-js-pm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# PM-EXT 3 toolchain. PM-EXT 4 added the HTTP path: compose on the
# engagement's own pilots/tls (TLS 1.3 driver) + pilots/http-codec
# (HTTP/1.1 wire codec) rather than pulling in a parallel HTTP stack
# (ureq, reqwest). Cruftless's resolver-instance #0 composes on
# resolver-instance #1's existing surface per Doc 729 §V compositional-
# safety principle.
[dependencies]
# PM-EXT 4: HTTP GET path. tls + http-codec compose into pm_http_get
# without dragging in a Runtime instance (the PM runs at install time,
# before the runtime is wired).
rusty-tls = { path = "../../tls/derived" }
rusty-http-codec = { path = "../../http-codec/derived" }
# tarball decompression
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# tarball extraction
tar = { version = "0.4", default-features = false }
# SRI integrity verification (sha-512 for dist.integrity)
sha2 = { version = "0.10", default-features = false }
# legacy fallback verification (sha-1 for dist.shasum on pre-SRI
# packages — see pilots/rusty-js-pm/docs/registry-response-schema.md
# §Class A footnote)
sha1 = { version = "0.10", default-features = false }
# SRI base64 decoding
base64 = { version = "0.22", default-features = false, features = ["std"] }
# package.json + lockfile parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# hex encoding for shasum fallback
hex = { version = "0.4", default-features = false, features = ["std"] }
