[package]
name = "rusty-js-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rusty-js-ast = { path = "../../rusty-js-ast" }
rusty-js-parser = { path = "../../rusty-js-parser/derived" }
rusty-js-bytecode = { path = "../../rusty-js-bytecode/derived" }
rusty-js-gc = { path = "../../rusty-js-gc/derived" }
# Doc 731 §VII / JIT-EXT 8: optional JIT path. When a function is hot,
# has integer-Number args, and is in the typed-i64 subset, dispatch
# to the JIT-compiled version instead of the bytecode interpreter.
rusty-js-jit = { path = "../../rusty-js-jit/derived" }
# Shape-EXT 4: hidden classes (shapes) for cruftless's Object representation.
# Substrate-introduction round per cruftless seed §A8.13. See
# pilots/rusty-js-shapes/seed.md + docs/shape-design.md. Object carries a
# parallel shape slot for the modal storage form; on non-Shape-eligible
# installs the Object migrates to the legacy IndexMap-only Dictionary form.
rusty-js-shapes = { path = "../../rusty-js-shapes/derived" }
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2"
# Ω.5.P46.E1.napi-v1: dlopen for .node native modules.
libloading = "0.8"

[dev-dependencies]
# Tier-Ω.5.b module loader tests exercise the node:* built-in dispatch
# path, which is wired by cruftless (renamed from host-v2 on 2026-05-21).
# Dev-dep avoids the production cycle.
cruftless = { path = "../../../cruftless" }
